    while curl_multi_exec). (Laruence)

- Date:
  . Fixed bug #68078 (Datetime comparisons ignore microseconds). (Willem-Jan
    Zijderveld)

- Fileinfo:
  . Fixed bug #71434 (finfo throws notice for specific python file). (Laruence)

- FPM:
  . Fixed bug #62172 (FPM not working with Apache httpd 2.4 balancer/fcgi
    setup). (Matt Haught, Remi)

- Standard:
  . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)

- Zip:
  . Fixed bug #71561 (NULL pointer dereference in Zip::ExtractTo). (Laruence)

04 Feb 2016, PHP 5.6.18

- Core:
  . Fixed bug #71039 (exec functions ignore length but look for NULL
    termination). (Anatol)
  . Fixed bug #71089 (No check to duplicate zend_extension). (Remi)
  . Fixed bug #71201 (round() segfault on 64-bit builds). (Anatol)
  . Added support for new HTTP 451 code. (Julien)
  . Fixed bug #71273 (A wrong ext directory setup in php.ini leads to crash).
    (Anatol)
  . Fixed bug #71323 (Output of stream_get_meta_data can be falsified by its
    input). (Leo Gaspard)
  . Fixed bug #71459 (Integer overflow in iptcembed()). (Stas)

- Apache2handler:
  . Fix >2G Content-Length headers in apache2handler. (Adam Harvey)

- FTP:
  . Implemented FR #55651 (Option to ignore the returned FTP PASV address).
    (abrender at elitehosts dot com)

- Opcache:
  . Fixed bug #71127 (Define in auto_prepend_file is overwrite). (Laruence)
  . Fixed bug #71024 (Unable to use PHP 7.0 x64 side-by-side with PHP 5.6 x32
    on the same server). (Anatol)

- PCRE:
  . Upgraded bundled PCRE library to 8.38.

- Phar:
  . Fixed bug #71354 (Heap corruption in tar/zip/phar parser). (Stas)
  . Fixed bug #71391 (NULL Pointer Dereference in phar_tar_setupmetadata()).
    (Stas)
  . Fixed bug #71488 (Stack overflow when decompressing tar archives). (Stas)

- Session:
  . Fixed bug #69111 (Crash in SessionHandler::read()). (Anatol)

- SOAP:
  . Fixed bug #70979 (crash with bad soap request). (Anatol)

- SPL: