@@ -17,6 +17,9 @@ PHP                                                                        NEWS
   . Fixed bug #62172 (FPM not working with Apache httpd 2.4 balancer/fcgi
     setup). (Matt Haught, Remi)
 
+- PDO MySQL:
+  . Fixed bug #71569 (#70389 fix causes segmentation fault). (Nikita)
+
 - Standard:
   . Fixed bug #70720 (strip_tags improper php code parsing). (Julien)
 
